# chuk-mcp-time-server

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  manifest.in  pyproject.toml  smithery.yaml  uvx.toml
src/chuk_mcp_artifact_server/: main.py  models.py  tools.py
tests/: test_artifact_tools.py  test_time_server.py
tests/server/: test_config_loader.py  test_logging_config.py  test_server.py  test_server_registry.py
