[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-artifact-server"
version = "0.1.11"
description = "CHUK MCP Artifact Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-artifacts>=0.1.2",
    "chuk-mcp-runtime>=0.1.36",
    "mcp>=1.6.0",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2"
]

[project.scripts]
chuk-mcp-artifact-server = "chuk_mcp_artifact_server.main:main"
mcp-artifact-server = "chuk_mcp_artifact_server.main:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_mcp_artifact_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
